cluster/apps/media-server/nzbget/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nzbget
  namespace: media-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nzbget
  ports:
    - name: nzbget-http
      port: 6789
      protocol: TCP
      targetPort: nzbget-http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nzbget
  namespace: media-server
  labels:
    app.kubernetes.io/name: nzbget
  annotations:
    external-dns.alpha.kubernetes.io/hostname: &fqdn nzbget.${DOMAIN}
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - *fqdn
      secretName: nzbget-cert
  rules:
    - host: *fqdn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nzbget
                port:
                  name: nzbget-http
